force-app/main/default/objects/PEO_Implementation_Checklist__c/PEO_Implementation_Checklist__c.object-meta.xml
<CustomObject>
    <label>PEO Implementation Checklist</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>PEO Implementation Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PEO Implementation Checklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>