force-app/main/default/objects/PEO_Implementation_Checklist__c/fields/Anticipated_First_Check_Date_Weekly__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_First_Check_Date_Weekly__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anticipated First Check Date - Weekly</label>
    <type>Date</type>
</CustomField>