force-app/main/default/objects/PEO_Implementation_Checklist__c/fields/Controlled_Ownership_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Ownership_Agreement__c</fullName>
    <label>Controlled Ownership Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>