force-app/main/default/objects/PEO_Implementation_Checklist__c/fields/Family_members_of_5_2_1_owners__c.field-meta.xml
<CustomField>
    <fullName>Family_members_of_5_2_1_owners__c</fullName>
    <label>Family members of &gt;5%,2%,1% owners</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>