force-app/main/default/objects/PEO_Implementation_Checklist__c/fields/Flex_Hiring__c.field-meta.xml
<CustomField>
    <fullName>Flex_Hiring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flex Hiring</label>
    <type>Checkbox</type>
</CustomField>