force-app/main/default/objects/PEO_Implementation_Checklist__c/fields/Name_of_members_of_5_2_1_owners__c.field-meta.xml
<CustomField>
    <fullName>Name_of_members_of_5_2_1_owners__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of members of &gt;5%,2%,1% owners</label>
    <length>255</length>
    <type>Text</type>
</CustomField>