force-app/main/default/objects/PEO_Implementation_Checklist__c/fields/Paychex_Flex_Time_Essentials__c.field-meta.xml
<CustomField>
    <fullName>Paychex_Flex_Time_Essentials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paychex Flex Time Essentials</label>
    <type>Checkbox</type>
</CustomField>