force-app/main/default/objects/PEO_Implementation_Checklist__c/fields/PEO_Underwriting_Checklist__c.field-meta.xml
<CustomField>
    <fullName>PEO_Underwriting_Checklist__c</fullName>
    <label>PEO Underwriting Checklist</label>
    <referenceTo>PEO_Onboarding_Checklist__c</referenceTo>
    <relationshipLabel>PEO Implementation Checklists</relationshipLabel>
    <relationshipName>PEO_Implementation_Checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>