force-app/main/default/objects/PEO_Implementation_Checklist__c/fields/Period_Begin_Dates_Weekly__c.field-meta.xml
<CustomField>
    <fullName>Period_Begin_Dates_Weekly__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Period Begin Dates - Weekly</label>
    <type>Date</type>
</CustomField>