force-app/main/default/objects/PEO_Implementation_Checklist__c/fields/Period_End_Date_BiWeekly__c.field-meta.xml
<CustomField>
    <fullName>Period_End_Date_BiWeekly__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Period End Date - BiWeekly</label>
    <type>Date</type>
</CustomField>