force-app/main/default/objects/PEO_Implementation_Checklist__c/fields/Require_multiple_client_codes__c.field-meta.xml
<CustomField>
    <fullName>Require_multiple_client_codes__c</fullName>
    <label>Require multiple client codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>