force-app/main/default/objects/PEO_Implementation_Checklist__c/fields/Users_own_1_of_company_earn_150k__c.field-meta.xml
<CustomField>
    <fullName>Users_own_1_of_company_earn_150k__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Users own &gt;1% of company earn &gt;$150k</label>
    <length>255</length>
    <type>Text</type>
</CustomField>